# csmi.m2.projet-ef

./: .gitignore  README.md
Software_Management_Report/CAMARA_Mamadou/: agil_method.tex
Software_Management_Report/GERHARD_Pierre/: Rapport.tex
Software_Management_Report/LANTZ_Thomas/: Extreme programming management.tex
Software_Management_Report/MOKADDEM_Djebril/: Minimalist_software_development.tex
Software_Management_Report/SPRENG_Marion/: Agile_Software_Development.tex  biblio.bib
Software_Management_Report/VANTHONG_Benjamin/: Vanthong.Benjamin.tex
deflection/: CMakeLists.txt  membrane.cfg  membrane.cpp
maxwell/: .gitignore  minimalist_maxwell.cpp  minmalist_maxwell.hpp
maxwell/doc_maxwell/: CMakeLists.txt
maxwell/maxwell_dg/: CMakeLists.txt  README.md  circle.geo  circle2.geo  feelpp_maxwell_DG.cfg  maxwell_DG.hpp  maxwell_DG_main.cpp  square-simplex.geo
maxwell/maxwell_dg/3D Maxima/: pvf.wxm
maxwell/maxwell_dg/doc/: Beamer.tex  Rapport.tex  Rapport_en.tex  gantt.sty  title_page_1.tex  title_page_2.tex
maxwell/test_notemplate/: CMakeLists.txt  minimalist_maxwell.cpp
tp1/: CMakeLists.txt  README.md  lap2.cpp
tp1/GERHARD_Pierre/: Rapport.tex
tp1/GERHARD_Pierre/src/: CMakeLists.txt  membrane.cfg  membrane.cpp
